# ChangeLog for net-misc/rsync
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/ChangeLog,v 1.146 2008/02/19 21:12:09 cardoe Exp $

  19 Feb 2008; Doug Klima <cardoe@gentoo.org> rsync-3.0.0_pre8.ebuild,
  rsync-3.0.0_pre9.ebuild:
  sys-apps/attr should only be required on Linux, bug #210680

*rsync-3.0.0_pre9 (11 Feb 2008)

  11 Feb 2008; Mike Frysinger <vapier@gentoo.org> +rsync-3.0.0_pre9.ebuild:
  Version bump.

*rsync-3.0.0_pre8 (12 Jan 2008)

  12 Jan 2008; Mike Frysinger <vapier@gentoo.org> +rsync-3.0.0_pre8.ebuild:
  Version bump rsync-3.0.0_pre7 rsync-3.0.0_pre8.

*rsync-3.0.0_pre7 (17 Dec 2007)

  17 Dec 2007; Mike Frysinger <vapier@gentoo.org> +rsync-3.0.0_pre7.ebuild:
  Version bump.

  03 Dec 2007; Raúl Porcel <armin76@gentoo.org> rsync-2.6.9-r5.ebuild:
  ia64 stable wrt security #200821

  03 Dec 2007; Jeroen Roovers <jer@gentoo.org> rsync-2.6.9-r5.ebuild:
  Stable for HPPA (bug #200821).

  02 Dec 2007; Markus Rothe <corsair@gentoo.org> rsync-2.6.9-r5.ebuild:
  Stable on ppc64; bug #200821

  02 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  rsync-2.6.9-r5.ebuild:
  ppc stable, bug #200821

  02 Dec 2007; Jose Luis Rivero <yoswink@gentoo.org> rsync-2.6.9-r5.ebuild:
  Stable on alpha wrt security bug #200821

  01 Dec 2007; Markus Ullmann <jokey@gentoo.org> rsync-2.6.9-r5.ebuild:
  Stable on arm/sparc

  01 Dec 2007; Christoph Mende <angelos@gentoo.org> rsync-2.6.9-r5.ebuild:
  Stable on amd64 wrt bug #200821

  01 Dec 2007; Markus Meier <maekke@gentoo.org> rsync-2.6.9-r5.ebuild:
  x86 stable, security bug #200821

*rsync-3.0.0_pre6 (01 Dec 2007)

  01 Dec 2007; Mike Frysinger <vapier@gentoo.org> +rsync-3.0.0_pre6.ebuild:
  Version bump.

*rsync-2.6.9-r5 (01 Dec 2007)

  01 Dec 2007; Mike Frysinger <vapier@gentoo.org>
  +files/rsync-2.6.9-munge-symlinks.patch, +rsync-2.6.9-r5.ebuild:
  Fix from upstream for #200821.

*rsync-2.6.9-r4 (28 Sep 2007)
