@@ -11,21 +11,17 @@ AUX rsyncd.conf.d 149 RMD160 0c2d0e34d1467fc0ec460760b49d621231c8e562 SHA1 fda56
 AUX rsyncd.init.d 558 RMD160 856e8d1d54fed649df029f4c12a735e4628d7bcc SHA1 4d217a584f872070062d17d18a5e3d5571e92e0b SHA256 08e620bac216e0acdb56d94198caebd7fd14b0a42e8465b2eb98b7420d369ab6
 AUX rsyncd.xinetd 170 RMD160 2ce2addea3cfff08f86a168b0d2d83446514a60f SHA1 a2c04b2f3615a474c72f92362337baa366910b20 SHA256 e19e99dc3daa12d5729dd972b637ed064a2b004a1c7fe75c9f2ebb5ab5997aa8
 DIST rsync-2.6.9.tar.gz 811841 RMD160 36d270d9f01e9a8e808f426196796001bdd3d5d2 SHA1 341618e230ea2e0e551d0ccf06f840d4f824c843 SHA256 ca437301becd890e73300bc69a39189ff1564baa761948ff149b3dd7bde633f9
-DIST rsync-3.0.0pre8.tar.gz 750791 RMD160 cf9f6d4879ee132f214c3a6c161957b9d5ad085d SHA1 7ff394b118a93f58e2e11f26168dec40f3ad1e25 SHA256 9e4a23ca5e4a8be61bc6c7f3691df45590cc5725d919728b710c3d639662cd69
+DIST rsync-3.0.0pre10.tar.gz 757496 RMD160 bdcf2e3e6644f6166424e7016670c284c7027e64 SHA1 4a5b9728239e65935be0cae322941bd1a37aea06 SHA256 4a1e88bdefab8e4e287c7919c348d7fb1ef9a9421daae9dbd0f7e3ff0078bfa7
 DIST rsync-3.0.0pre9.tar.gz 753288 RMD160 f65be61f12cc0af7181492f51c0d66226dd7b9df SHA1 2312d7c86b7df954d344cb43cd953686f8eb7a49 SHA256 22c72ada2cd290e3483ac7726e56ab7288a2c0209c3182fcdfef248c9185a19e
-EBUILD rsync-2.6.9-r1.ebuild 2062 RMD160 3d86cf3863503e682358f243280ee17358dcae41 SHA1 d4635f0cb77279c7b0ffb94801424b4223da2d59 SHA256 2ea7392ce226a5bd072d23d281831fb394b45fdf43b29204b8a395a205265f74
-EBUILD rsync-2.6.9-r2.ebuild 2144 RMD160 a022b024223773e5dba62c76f1ea29476e036c43 SHA1 9c3dc75e08064673996d6c460293ce5f94aac546 SHA256 e1c0700dc1accead8faa4c3868a52282be1b2851fc898e772abf3eb126e0aaba
-EBUILD rsync-2.6.9-r3.ebuild 2195 RMD160 7032c361b7f21e7fe56e0b4859ab934f38e6ab29 SHA1 def6590e4c3624342952f24bf3f54a75e77d510a SHA256 af28a265f085d32d0ea6852c7fd398ef633aae68805d76b1988ac69ae90c913b
-EBUILD rsync-2.6.9-r4.ebuild 2259 RMD160 8c868b6eb95eca30f76303c9e36bb97faf92a56a SHA1 8f2a2ca559f60980439c3cfd48db945740491f37 SHA256 f65ea81420a8384b00fcff35fbecd966d08137ec49b0d05b95b6becc6cee8def
-EBUILD rsync-2.6.9-r5.ebuild 2246 RMD160 0586624e5b1ef03bdbd880433bd4d6f11684415e SHA1 d1e23d88cbe740a568ff0fa2ab30833fe4f089b9 SHA256 08f8968c78a92d93c1e54ece752e05fb67b00e85062a9b36b151d7b2fa86e149
-EBUILD rsync-3.0.0_pre8.ebuild 1918 RMD160 28c5abf4de16e713892e82f230d2cf614fa58358 SHA1 88a5277a170fc2eb649b2424a26c8c8528eaea39 SHA256 70ab4559a3e37628f7fe5c8e0343bdc9dab89ba9567a640117f0a2ca571087be
+EBUILD rsync-2.6.9-r5.ebuild 2245 RMD160 1d482446e7e24d1fb404edc70ebb6ee6da43fc75 SHA1 fb40baaefb067dff5bca9bd2de91c7834fdd7fcd SHA256 3249e029e6131cadc6d72c8b830e5156ac9f245aa4657865b8d328e0b151956e
+EBUILD rsync-3.0.0_pre10.ebuild 1919 RMD160 babb0ffd40f4ebd7dbe8b66e5da539c6a23d7651 SHA1 f1aa85ecf723d9be2105588e79ffa75bdc121c04 SHA256 0044dcd92717397241458b5710f38f5ec3890148a2203d158fe108c6c8e3bdad
 EBUILD rsync-3.0.0_pre9.ebuild 1918 RMD160 a050ff57282eb1a1fb5497de56c3bf6edf08c58e SHA1 9f7ae1d3c391143b03377fba6219df18f554ad69 SHA256 345f7bce7fb6aa5667a1e8a660eadd92dc25dd9e1c1f3549816381a340e278cb
-MISC ChangeLog 18713 RMD160 9f705363e77e04d5b0101fff2842a96d689f7178 SHA1 9b910d53b21b41b131deeb612ee0ca7cb26187d1 SHA256 95d6a40d9750f02ef614f2a5b9487e24126b35b033ec15ea4acc5dd9b9f1eb3a
+MISC ChangeLog 18841 RMD160 5314e6c0c5a03c69475d1cb160fb7bb16be03ac4 SHA1 c590a995b937eaccbe31d382f24fc75abdaed8f8 SHA256 54c596ccbe7bc5ee4ebc7bf01616e8329107a7313ab5f351d328d63147fd7203
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFHu0YzoeSe8B0zEfwRAs8SAJ44vH/cWNKy6ChmhlMZyoJfAphQCwCfYH5R
-HCR12qjTWlaCjNyEPj9Z0aA=
-=jR9s
+iD8DBQFHu6uqj9hvisErhMIRAkk4AJ9CFuP0lPYEcCy48/uYREk7jLThkwCeKndK
+Eyh5TVVVjb6jxpcFL9H5j7E=
+=pCTK
 -----END PGP SIGNATURE-----
