@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/rsync
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/ChangeLog,v 1.146 2008/02/19 21:12:09 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/ChangeLog,v 1.147 2008/02/20 04:25:08 vapier Exp $
+
+*rsync-3.0.0_pre10 (20 Feb 2008)
+
+  20 Feb 2008; Mike Frysinger <vapier@gentoo.org> +rsync-3.0.0_pre10.ebuild:
+  Version bump.
 
   19 Feb 2008; Doug Klima <cardoe@gentoo.org> rsync-3.0.0_pre8.ebuild,
   rsync-3.0.0_pre9.ebuild:
